CTCLoss 설치 및 설명 마무리

--- a/RNN/deep_speech/implementation/deep speech1 구현.ipynb
+++ b/RNN/deep_speech/implementation/deep speech1 구현.ipynb
@@ -843,7 +843,24 @@
     "cmake ../\n",
     "make\n",
     "export CUDA_HOME=\"/usr/local/cuda\"\n",
-    "```"
+    "```\n",
+    "\n",
+    "### 3-2. installing warp-ctc pytorch binding\n",
+    "\n",
+    "[pytorch C extension](https://github.com/YBIGTA/Deep_learning/blob/master/RNN/deep_speech/implementation/pytorch_c_extension.ipynb)에서 언급한 바와 같이 pytorch extension은 다음과 같은 과정으로 이루어진다 : \n",
+    "\n",
+    "1. C로 짜여진 torch 함수를 제작한다.\n",
+    "2. torch.utils.ffi.create_extension 함수로 1번의 코드를 빌드한다.\n",
+    "3. create_extension을 빌드하여 나온 모듈을 import하여 작성된 torch.autograd.Function을 작성한다.\n",
+    "4. 3번에서 작성된 함수를 사용하는 pytorch module을 작성하여 사용한다.\n",
+    "\n",
+    "현재 warp-ctc는 lua based torch language여서 C로 짜여진 torch 함수로의 바인딩이 필요하다. <br>\n",
+    "\n",
+    "warp-ctc -> C binding -> pytorch binding이 필요한 것이다. <br>\n",
+    "\n",
+    "모든 코드는 본 [깃헙](https://github.com/SeanNaren/warp-ctc/tree/pytorch_bindings/pytorch_binding) 에 pytorch_binding을 제공한다. <br>\n",
+    "\n",
+    "제공하는 프로세스에 따라 CTCLoss 모듈을 설치한다. <br>"
    ]
   },
   {
@@ -852,18 +869,27 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "'return' outside function (__init__.py, line 59)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/home/mappiness/anaconda3/envs/torch/lib/python3.6/site-packages/warpctc_pytorch/__init__.py\"\u001b[0;36m, line \u001b[0;32m59\u001b[0m\n\u001b[0;31m    return _CTC()(acts, labels, act_lens, label_lens)\u001b[0m\n\u001b[0m                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from warpctc_pytorch import CTCLoss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "CTCLoss 는 각 time stamp 에서 label이 나올 수 있는 확률을 통해 loss를 구한다. \n",
+    "input : \n",
+    "    probs : N * L * M 의 model의 결과값. 3차원 확률 행렬이다. N(batch size) L(label 길이) M(총 timestamp (cropped a little by CNN))\n",
+    "    labels : 해당 데이터의 label의 sequence. 1차원. batch를 쭉 이은 labels\n",
+    "    probs_sizes : probs의 M. 2차원. N * M\n",
+    "    label_sizes : label의 길이. 2차원. N * (labels/N)\n",
+    "\"\"\""
    ]
   }
  ],
