역전파 정의 및 추가 제언

--- a/RNN/deep_speech/implementation/deep speech1 구현.ipynb
+++ b/RNN/deep_speech/implementation/deep speech1 구현.ipynb
@@ -163,13 +163,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.1 Making audio spectogram using fourier transformation"
+    "## 1. 데이터 정의"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 1.1 Making audio spectogram using fourier transformation\n",
+    "\n",
     "## Dataset label csv 파일 제작\n",
     "\n",
     "### training, testing을 위한 data는 다음과 같은 형태로 폴더 내에 저장이 되어 있다. \n",
@@ -210,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -258,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -340,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -359,7 +361,7 @@
        "[torch.FloatTensor of size 161x151]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -400,7 +402,7 @@
        "[torch.FloatTensor of size 442x11627]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -481,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -538,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -582,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -625,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -641,23 +643,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'nn' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-8feab9035334>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0m그\u001b[0m \u001b[0m필요성은\u001b[0m \u001b[0m위의\u001b[0m \u001b[0m딥\u001b[0m \u001b[0m스피치\u001b[0m \u001b[0m모델\u001b[0m \u001b[0m그림에서\u001b[0m \u001b[0m데이터가\u001b[0m \u001b[0mtranspose됨을\u001b[0m \u001b[0m보면\u001b[0m \u001b[0m알\u001b[0m \u001b[0m수\u001b[0m \u001b[0m있다\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \"\"\"\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mSequenceWise\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mModule\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodule\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSequenceWise\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'nn' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Collapses input of dim T*N*H to (T*N)*H, and applies to a module.\n",
@@ -728,9 +718,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -749,7 +739,7 @@
     "        if audio_conf is None:\n",
     "            audio_conf = {}\n",
     "        self._hidden_size = rnn_hidden_size\n",
-    "        self._hidden_layers = nb_layers\n",
+    "#        self._hidden_layers = nb_layers\n",
     "        self._rnn_type = rnn_type\n",
     "        self._audio_conf = audio_conf or {}\n",
     "        self._labels = labels\n",
@@ -865,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -890,6 +880,63 @@
     "    probs_sizes : probs의 M. 2차원. N * M\n",
     "    label_sizes : label의 길이. 2차원. N * (labels/N)\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3-3 deep speech를 위한 CTC Loss 정의"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# training iteration에서 각 epoch때 위의 인자 순서대로 넣는다.\n",
+    "criterion = CTCLoss()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. 역전파 정의\n",
+    "\n",
+    "본 논문에서의 gradient descent method 는 **Nesterov's Accelerated Gradient Descent** 를 사용한다. <br>\n",
+    "\n",
+    "하지만 최근 deep speech 의 [documentation](http://deepspeech.readthedocs.io/en/latest/ParallelOptimization.html)을 따르면, <br>\n",
+    "\n",
+    "단순히 **adam**이 fine-tuning이 더 적게 필요하기 때문에(수렴이 더 빠르기 때문에) 본 method를 사용한다. <br>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "model = DeepSpeech()\n",
+    "parameters = model.parameters()\n",
+    "optimizer = torch.optim.Adam(parameters,lr= 3e-4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4-1 Language model과 beam search 구현\n",
+    "\n",
+    "beam search의 경우에는 [ryanleary](https://github.com/ryanleary/pytorch-ctc.git) 가 구현해 놓았다. <br>\n",
+    "\n",
+    "본 decoder에 language model을 넣어야 하는데, 다음 번에는 자체적으로 구현한 한국어 language model을 "
    ]
   }
  ],
