--- a/RNN/finance/[2017.08.12.토]WTTE-RNN 정리자료.md
+++ b/RNN/finance/[2017.08.12.토]WTTE-RNN 정리자료.md
@@ -12,11 +12,12 @@
 
 Churn의 정의 : [매일경제용어사전 Churn](http://terms.naver.com/entry.nhn?docId=258&cid=43659&categoryId=43659)
 
-+ (통신회사 마케팅 용어의 경우) 요금 등의 이유로 사업자를 자주 바꾸는 고객 --> 고객이탈
++ (통신회사 마케팅 용어의 경우) 요금 등의 이유로 사업자를 자주 바꾸는 고객 --> 고객이탈, 서비스 이탈
 
 Churn rate 정의 : [위키피디아 정의](https://en.wikipedia.org/wiki/Churn_rate)
 
 + 특정 기간에 그룹으로 부터 벗어나는 개인의 수나 품목의 수를 측정하는 용어
++ 서비스 이탈율, 특정 기간 동안 전체 가입자 수에 대해 서비스를 해지한 가입자의 비율
 
 ![churn image example](https://1335865630.rsc.cdn77.org/images/churn-rate.jpg)
 
@@ -26,7 +27,7 @@ Churn rate 정의 : [위키피디아 정의](https://en.wikipedia.org/wiki/Churn
 >
 > ​				$  y^n = \begin{cases} 1, & \text{if customer n will churn }. \\  0,  & \text{if customer n won' churn}. \end{cases}$ 
 >
-> 우리가 구축하고 싶은 머신러닝 모델은 고객 n의 churning 확률을 추측하기 위하여 feature $x^{n}$ 을 사용한다.
+> 우리가 구축하고자 하는 머신러닝 모델은 고객 n의 churning 확률을 추측하기 위해 feature $x^{n}$ 을 사용한다.
 
 하지만 현실세계에서 이러한 모형은 잘 맞지 않는다. 문제는 언어적인 오류에서 기인한다 - churn을 둘러싼 우리의 직관은 수수깨끼문제처럼 보인다. 
 
@@ -308,6 +309,10 @@ $\alpha_t와 \beta_t$는 feature data $x_t$에 의해 통제된다.
 
 ####  Weibull 분포의 장점
 
+![weibull](http://www.epixanalytics.com/modelassist/AtRisk/images/12/image40.gif)
+
+​                                                     (이미지출처 : http://www.epixanalytics.com/modelassist/AtRisk/Model_Assist.htm#Distributions/Continuous_distributions/Weibull.htm)
+
 와이불 분포는 60-70년대에 유행하였고 과학자와 엔지니어들 사이에서 인기있었다. 
 
 와이블 분포는 아래와 같은 특징이 있다.
@@ -320,8 +325,13 @@ $\alpha_t와 \beta_t$는 feature data $x_t$에 의해 통제된다.
 + 정규화 메커니즘에 의해 만들어졌다. $\beta$의 크기를 조절하면 뾰족한 정도를 조절할 수 있다.
 
 
-
 지수분포와 이산 기하분포는 $\beta=1$인 경우이다. $\beta=2$인 경우는 [레일리분포](https://ko.wikipedia.org/wiki/%EB%A0%88%EC%9D%BC%EB%A6%AC_%EB%B6%84%ED%8F%AC)이다.
+
+
+
+![레일리 분포](https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/Rayleigh_distributionPDF.png/270px-Rayleigh_distributionPDF.png)
+
+​                                       (이미지 출처 : https://ko.wikipedia.org/wiki/%EB%A0%88%EC%9D%BC%EB%A6%AC_%EB%B6%84%ED%8F%AC)
 
 
 
@@ -330,8 +340,6 @@ $\alpha_t와 \beta_t$는 feature data $x_t$에 의해 통제된다.
 2차원의 output layer를 가진 RNN 모형. 활성화 함수의 경우 output $\beta$에 대해서는 SoftPlus 를 추천하고 output $\alpha$에 대해서는 지수분포를 추천하다. 
 
 **softplus** : $f(x)=ln(1+e^x)$ 
-
- 
 
 
 
@@ -343,10 +351,23 @@ $\alpha_t와 \beta_t$는 feature data $x_t$에 의해 통제된다.
 
 churn 예측에 대해서 필자는 non event 사건이 발생하지 않는 것에 중점을 두라고 주장하였다. 사건발생에 집중하는 것 대신에 우리는 사건이 발생하지 않는 구간(사건발생 사이의 시간)에 집중하는 것이 좋다. 실시간으로 사건이 발생한 이후의 시간만 알기 때문에 단지 사건 발생까지의 시간만 예측하면 된다.
 
-| Ground truth world | actual churners    | customer with TTE $y_t>\tau$ is churned  |
+|                    |                    |                                          |
 | :----------------- | ------------------ | ---------------------------------------- |
+| Ground truth world | actual churners    | customer with TTE $y_t>\tau$ is churned  |
 | Prediction world   | predicted churners | $Pr(Y_t\le\tau)<\theta^*$ the customer is predicted as churned |
 | training world     | observed churners  | If $y_t<\tau$ customer was active. If $\hat{y}_t\ge\tau$ customer was churned |
+
+
+
+sliding box 모델의 churn에 대한 정의 처럼 고정된 시간 내에 사건의 발생확률을 추정할 수 있다. 만약  $\tau=100$days 일 때 구매 확률이 $\theta^*=0.01$ 보다 낮다면 그 고객은 churn이라고 말할 수 있다.  큰 차이점은 모델이 학습된 이후에 사용할 threshold를 정할 수 있다는 것이다. 만약 회사를 100일 안에 망하게 하고 싶으면 $\tau=200$ 으로 잡으면 된다. 
+
+
+
+WTTE-RNN은 sliding box model보다 복잡한 가정을 사용한다. sliding box 모델과 다르게 독자들은 아마도 학습에 최근 데이터를 사용할 것이다. 그렇게 하지 않는 것 또한 가정이다. 
+
+
+
+분포를 사용하면 여러분은 churn의 정의에 대해 더욱 sensitive하고 설명가능하고 훨씬 더 풍부한 예측을 할 수 있다. 
 
 
 
