--- a/GAN/2017-08-22-info-gan.md
+++ b/GAN/2017-08-22-info-gan.md
@@ -47,7 +47,7 @@ $$\min_{G}\max_{D}{V_I(D,G)} = V(D, G) - \lambda I(c; G(z, c))$$
 
 ${V(D, G)}$는 일반적인 GAN의 Loss입니다. 결국 위의 식은 일반적인 GAN의 Loss에 regularization term을 더해준 것이죠. ${G}$의 입장을 생각해봅시다. ${G}$는 위의 가치함수를 최소화해야합니다. 따라서 뒤의 항, ${I(c; G(z, c))}$을 최대화해야합니다. 이는 latent code ${c}$와 Generator가 만들어내는 샘플들의 분포 ${G(z, c)}$가 높은 상호정보량을 가져야함을 의미하는 것이죠.
 
-하지만 이 과정에서 ${P(c \vert x)}$를 알아야만 위의 상호정보량을 구할 수 있다는 문제가 발생합니다. 이에 우리는 어떠한 분포 ${Q(c\vert x)}$를 이용해 ${L_I (G, Q)}$를 ${I(c; G(z, c))}$이 lower bound, 하한선이 되게 합니다. 상호정보량을 직접 구하는 대신 ${Q}$를 사용해 하한선을 표현하고 이 하한선을 최대화하는 것이죠. 따라서 Loss를 재정의하면
+하지만 이 과정에서 ${P(c \vert x)}$를 알아야만 위의 상호정보량을 구할 수 있다는 문제가 발생합니다. 이에 우리는 어떠한 분포 ${Q(c\vert x)}$를 이용해 ${L_I (G, Q)}$를 ${I(c; G(z, c))}$의 lower bound, 하한선이 되게 합니다. 상호정보량을 직접 구하는 대신 구하기 쉬운 ${Q}$를 사용해 하한선을 표현하고 이 하한선을 최대화하는 것이죠. ${Q}$를 써서 Loss를 재정의하면
 
 $${\min_{G \cdot Q} \max_{D} V_{InfoGAN}(D, G, Q) = V(D, G) - \lambda L_I(G, Q)}$$
 
