Lecture 4 Word Window Classification and Neural Networks

--- a/RNN/nlp/이론/Natural Language Processing with Deep Learning/Lecture 4 Word Window Classification and Neural Networks.ipynb
+++ b/RNN/nlp/이론/Natural Language Processing with Deep Learning/Lecture 4 Word Window Classification and Neural Networks.ipynb
@@ -231,10 +231,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- loss를 구하는 다른 방법인 max-margin loss에 대해서 알아본다\n",
+    "- 우리의 목표는 center word에 지명에 해당하는 단어(ex-Paris)가 들어왔을 때 높은 score를 주고, 아닌 경우에는 낮은 score를 주는 것이다.\n",
     "- S : score of center word = paris = named entity location\n",
-    "- Sc : score of center word = museums = not a named entity location\n",
+    "- Sc : score of center word = museums = not a named entity location(우리가 원하는 location이 center word가 아닌 window는 다른 class로 인식)\n",
     "- minimize J의 방향으로 training 시켜준다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "boundary region을 그리면, max-margin loss는 maximize the distance between the closest point 형태로 나타난다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이제 s를 variable U,W,b에 대해서 derivative해본다."
    ]
   },
   {
@@ -248,9 +262,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- U에 대해서 derivative = a\n",
     "- 처음에는 U,W,b가 모두 작아서 J = loss가 크다.\n",
-    "- 만약 s = 5, sc = 2 가 나왔으면 J = max(0, 1 - 5 + 2) = 0이 된다. 해당하는 input에 대해서는 loss가 없다.\n",
-    "- J>0인 경우, s와 sc에 대해서 derivatives를 계산한다. (backpropagation)"
+    "- 만약 s = 5, sc = 2 가 나왔으면 J = max(0, 1 - 5 + 2) = 0이 된다. 해당하는 input에 대해서는 loss가 없다."
    ]
   },
   {
@@ -264,7 +278,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- W23을 이용하지 않고도 a1을 계산할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![rnn link](http://i.imgur.com/0I5gRIT.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wij로 미분하는 경우 ai, 즉 vector a의 i번째 element만 계산한다.(계산 단축)"
    ]
   },
   {
@@ -278,8 +306,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- W의 i번째 row와 x의 inner product = sigma를 이용하여 표현\n",
     "- Wij로 미분할 때, k = j가 아닌 Wik들은 모두 상수로서 미분하면 사라진다.\n",
-    "- f'(z) = f(z)(1-f(z))이므로, 계산이 굉장히 빨라진다."
+    "- delta i는 Wik와 같은 row 다른 col에 대해서도 사용될 수 있다. 따라서 reuse된다.\n",
+    "- f'(z) = f(z)(1-f(z))이므로, 계산이 굉장히 빨라진다. (미분계산이 필요없다. 단순한 computing)"
    ]
   },
   {
@@ -293,7 +323,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- element i와 j의 조합만큼 계산이 이루어질텐데, 이를 쉽게 하기 위해서 outer product를 사용한다. 계산이 매우 간단해진다! \n",
+    "- delta의 dim = [2,1], x transpose의 dim = [1,3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![rnn link](http://i.imgur.com/0xz2uT4.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "zi의 derivative로 chain rule"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "xi input으로 derivative"
    ]
   },
   {
@@ -307,7 +359,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- i번째가 아닌 U transpose * a는 ai로 미분했을 때 사라진다. 따라서 Ui만 남는다. \n",
+    "- j번째가 아닌 x는 xj로 미분했을 때 사라진다. 따라서 Wij만 남는다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![rnn link](http://i.imgur.com/I78MclP.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "vector x는 xj가 합쳐진 여러 row의 벡터이므로, full gradient는 Wj가 합쳐진 여러 col을 가지는 전체 W가 된다."
    ]
   }
  ],
