SCAN algorithm_상헌 tmp

--- a/RNN/SCAN_algorithm.ipynb
+++ b/RNN/SCAN_algorithm.ipynb
@@ -90,7 +90,17 @@
     "이제 **structural similarity**를 통하여 cluster의 중심이 되는 core vertices를 뽑는 법을 정의한다. <br>\n",
     "\n",
     "여기서 핵심은, 하나의 cluster에는 하나의 core가 있는 것이 아니라는 점이다. <br>\n",
-    "\n"
+    "\n",
+    "$CORE_{\\epsilon, \\mu}(v) \\Rightarrow |N_\\epsilon (v)| \\geq \\mu $<br>\n",
+    "\n",
+    "$\\mu$ 라는 hyperparam을 통해서 CORE를 정의한다. <br>\n",
+    "\n",
+    "이제 CORE node들이 닫는 node들의 집합, 그리고 이를 통해서 cluster 집합을 정의한다. <br>\n",
+    "\n",
+    "### 3.5 Direct structure Reachability\n",
+    "\n",
+    "이후는 논문으로 설명한다. <br>\n",
+    "[ref](http://www.ualr.edu/xwxu/publications/kdd07.pdf)"
    ]
   }
  ],
