--- a/RNN/SCAN_algorithm.ipynb
+++ b/RNN/SCAN_algorithm.ipynb
@@ -8,6 +8,16 @@
     "\n",
     "### 작성자 : 이상헌\n",
     "\n",
+    "## 0. 목적\n",
+    "\n",
+    "말뭉치를 '정리' 하고싶다. <br>\n",
+    "\n",
+    "이를 유전자를 보면 어떨까? 라는 물음에서 시작한다. <br>\n",
+    "\n",
+    "다음 이시간엔 ) heirarchical model <br>\n",
+    "\n",
+    "![tree](https://i.imgur.com/kQzIqht.png)\n",
+    "\n",
     "## 1. Introduction\n",
     "\n",
     "** Network clustering ** 은 유전자, 컴퓨터 네트워크, graph로 표현되는 전반적인 데이터에서 사용되는 기술이다. <br>\n",
