--- a/CNN/CS231n 1강~2강(혜주).md
+++ b/CNN/CS231n 1강~2강(혜주).md
@@ -7,8 +7,7 @@
 1강~2강의 내용을 도식화해서 정리하면 다음과 같습니다. 
 
 
-
-https://imgur.com/a/QsFZ4
+![default](https://user-images.githubusercontent.com/32008883/30751850-9303cba6-9ff5-11e7-9f0d-cb28d8087e58.JPG)
 
 
 
