--- a/CNN/CS231n 1강~2강(혜주).md
+++ b/CNN/CS231n 1강~2강(혜주).md
@@ -13,24 +13,24 @@
 
 ## 1.이미지 처리 insight(1강)
 
-1) 고양이가 어떻게 이미지를 인식할까? 에 대한 연구 (Hubel & Wiesel,1959)
+#### 1) 고양이가 어떻게 이미지를 인식할까? 에 대한 연구 (Hubel & Wiesel,1959)
 
 ![cs231n_week1_1](https://user-images.githubusercontent.com/32008883/30751966-dea3b4c2-9ff5-11e7-870d-44140ff3b480.JPG)
 
 
 고양이가 이미지를 처리하는 방법을 살펴보니, 각기 다른 뉴런이 이미지를 나누어 인식한다.  복잡한 이미지를 단순한 이미지로 나누어서 처리한다.
 
-2) 복잡한 물체(object)를 간단한 것의 결합으로 보는 시선
+#### 2) 복잡한 물체(object)를 간단한 것의 결합으로 보는 시선
 
 ![cs231n_week1_2](https://user-images.githubusercontent.com/32008883/30751987-f03d50e4-9ff5-11e7-8650-70da272845b6.JPG)
 
-3) 특성 중심(feature based)의 이미지 처리 
+#### 3) 특성 중심(feature based)의 이미지 처리 
 
 ![cs231n_week1_3](https://user-images.githubusercontent.com/32008883/30752062-1eba20aa-9ff6-11e7-92d5-38e5bb037353.JPG)
 
 이미지에서 중요한 특성만 추출해서 그 특징을 바탕으로 이미지를 처리한다. 예를 들어 위의 표지판에서는 'STOP' 이라는 글자가 '특성(feature)'이 된다. 
 
-4) 이미지넷 챌린지(IMAGENET Challenge)
+#### 4) 이미지넷 챌린지(IMAGENET Challenge)
 
 ![cs231n_week1_4](https://user-images.githubusercontent.com/32008883/30752067-21d78aac-9ff6-11e7-9f14-c279c2e63cf3.JPG)
 
@@ -42,7 +42,7 @@
 
 하지만 CNN은 새로 등장한 개념이 아니다. 1998년도에도 손글씨를 인식하여 우편을 분류하려는 노력이 있었는데, 2012년도의 CNN과 매우 유사함을 알 수 있다.
 
-4) 하지만 아직 갈 길은 멀다.. (to be continued..)
+#### 5) 하지만 아직 갈 길은 멀다.. (to be continued..)
 ![cs231n_week1_7](https://user-images.githubusercontent.com/32008883/30752075-258195bc-9ff6-11e7-9f6c-4b57682c0c21.JPG)
 
 위의 이미지를 기계가 파악할 수 있을까? '사람들은 몸무게에 예민하다','대통령이 이런 장난을 치는 것은 흔하지 않은 일이다' 등 다양한 맥락적 요소가 포함되어 있는 것이다. 즉, 사람의 시력은 단순한 것이 아니라 지능 (visual intelligence)도 포함되어 있다.  갈 길이 멀다는 뜻이다. 하지만 컴퓨터의 이미지 처리 관련 기술이 발전해야 삶의 질을 개선할 수 있다는 것 또한 팩트..
