--- a/CNN/CS231n 5강(혜주).md
+++ b/CNN/CS231n 5강(혜주).md
@@ -14,7 +14,7 @@
 
 ![cs231n_5_7](https://user-images.githubusercontent.com/32008883/32101164-fd84b09a-bb51-11e7-9438-8687194c9617.JPG)
 
-convolutional layer에 들어가기전, 저번시간에 기본적인 neural network의 구조를 배웠습니다.
+convolutional layer에 들어가기전, 저번시간에 배웠던 기본적인 neural network의 구조 기억나시나요?
 
 ![img](https://user-images.githubusercontent.com/32008883/32101217-443fdba4-bb52-11e7-8b11-a1cd0c75623f.JPG)
 
